Fix: Dark mode on mobile page

--- a/client/src/style/darktheme.css
+++ b/client/src/style/darktheme.css
@@ -214,7 +214,7 @@
 }
 
 @media only screen and (max-width: 63.9375em) {
-  .header-container .nav-items {
+  .darktheme .header-container .nav-items {
     background: #292b2e;
   }
 }
